Fix badge contrast

--- a/public/global.css
+++ b/public/global.css
@@ -90,4 +90,5 @@ body {
 }
 .placene {
    background: #19647e;
+   color: white;
 }
